Separate concerns in helper
Change a bit of the view too to reflect that. Preparation for modularity

--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -8,14 +8,23 @@ block content
     block title
   
   ul
-    each stat, key in eventList.stats
+    each subset, subsetTitle in eventList.stats
       li
-        h3= key
-        - if(typeof(stat) === 'object')
-          ul
-            each subStat, subStatKey in stat
-              li
-                h5=subStatKey
-                p= subStat
-        - else
-          p= stat
+        h3= subsetTitle
+        ul
+          each stat, statTitle in subset
+            li
+              h4= statTitle
+              - if(typeof(stat) === 'object')
+                ul
+                  each subStat, subStatKey in stat
+                    li
+                      h5=subStatKey
+                      p= subStat
+              - else
+                p= stat
+
+
+
+
+
