Add specific ID on groups

--- a/app/views/pages/mixins.jade
+++ b/app/views/pages/mixins.jade
@@ -1,5 +1,6 @@
 mixin group(group, groupTitle)
-  div.group
+  - var id = groupTitle.toLowerCase().replace(/\s+/g, '_');
+  div.group(id=id)
     h2= groupTitle
 
     ul
