--- a/app/views/pages/mixins.jade
+++ b/app/views/pages/mixins.jade
@@ -1,7 +1,8 @@
 mixin group(group, groupTitle)
   - var id = groupTitle.toLowerCase().replace(/\s+/g, '_');
   div.group(id=id)
-    h2= groupTitle
+    h2
+      a(href="#" + id)=groupTitle
 
     ul
       each subset, subsetTitle in group
