--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -4,5 +4,7 @@ html
     title
       block title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
+    script(src='/javascripts/script.js', type='text/javascript')
   body
     block content
