--- a/app/views/pages/mixins.jade
+++ b/app/views/pages/mixins.jade
@@ -1,8 +1,7 @@
 mixin group(group, groupTitle)
   - var id = groupTitle.toLowerCase().replace(/\s+/g, '_');
   div.group(id=id)
-    h2
-      a(href="#" + id)=groupTitle
+    h2=groupTitle
 
     ul
       each subset, subsetTitle in group
