Add additional infos for mobiles
Add a viewport with a device-width width, and a scale of 1.
Also change some CSS to make the page fit correctly (fix padding)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,12 +89,19 @@ h3.subset-title {
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
   body{
-    font-size: 3em;
+    max-width:100%;
+  }
+  
+  .group > ul {
+    padding: 0;
   }
 
-  .subset {
+  li.subset {
+    min-width:0;
     width:90%;
     margin-right:2.5%;
     margin-left:2.5%;
+    padding-right: 2.5%;
+    padding-left:2.5%;
   }
 }
